--- a/recipes.html
+++ b/recipes.html
@@ -22,14 +22,18 @@
         <h1>Recipes</h1>
 
         <div>
+            <div class="recipe-info">
             <h2>Swedish Pancakes</h2>
-            <p>Origin: Sweden</p>
-            <p>Source: Family Recipe</p>
-            <p>Category: Breakfast</p>
-            <div class="main-image">
-                <img src="images/swedish-pancakes.jpeg" width="300" alt = "Three thin pancakes on a white plate, topped with sugar, blackberries, and peaches.">
+            <div class="recipe-content">
+                <p>Origin: Sweden</p>
+                <p>Source: Family Recipe</p>
+                <p>Category: Breakfast</p>
             </div>
-            <p>I learned to make Swedish pancakes from my mom, who is a Swedish immigrant. Making them reminds me of childhood and all of my family still living in Sweden.</p>
+                <div class="main-image">
+                    <img src="images/swedish-pancakes.jpeg" width="300" alt = "Three thin pancakes on a white plate, topped with sugar, blackberries, and peaches.">
+                </div>
+                <p>I learned to make Swedish pancakes from my mom, who is a Swedish immigrant. Making them reminds me of childhood and all of my family still living in Sweden.</p>
+            </div>
             <div class="recipe-grid">
             <h3>Ingredients</h3>
             <ul class="ingredients">
@@ -56,14 +60,18 @@
         </div>
 
         <div>
-            <h2>Chocolate Chip Cookies</h2>
-            <p>Origin: Nashville</p>
-            <p>Source: Family Recipe</p>
-            <p>Category: Dessert</p>
-            <div class="main-image">
-                <img src="images/worst_cookies2.jpg" width="300" alt = "Two chocolate chip cookies on a wooden table, surrounded by chocolate chips and brown sugar.">
+            <div class="recipe-info">
+                <h2>Chocolate Chip Cookies</h2>
+                <div class="recipe-content">
+                    <p>Origin: Nashville</p>
+                    <p>Source: Family Recipe</p>
+                    <p>Category: Dessert</p>
+                </div>
+                <div class="main-image">
+                    <img src="images/worst_cookies2.jpg" width="300" alt = "Two chocolate chip cookies on a wooden table, surrounded by chocolate chips and brown sugar.">
+                </div>
+                <p>These cookies were my favorite thing to bake when I was young because of the simplicity.</p>
             </div>
-            <p>These cookies were my favorite thing to bake when I was young because of the simplicity.</p>
             <div class="recipe-grid">
             <h3>Ingredients</h3>
             <ul class="ingredients">
@@ -93,12 +101,16 @@
         </div>
 
         <div>
-            <h2>Chicken Quesadilla</h2>
-            <p>Origin: Nashville</p>
-            <p>Source: Family Recipe</p>
-            <p>Category: Dinner</p>
-            <div class="main-image">
-                <img src="images/best-chicken-quesadilla.jpeg" width="300" alt = "Six pieces of chicken quesadilla stacked on top of one another, topped with sour cream.">
+            <div class="recipe-info">
+                <h2>Chicken Quesadilla</h2>
+                <div class="recipe-content">
+                    <p>Origin: Nashville</p>
+                    <p>Source: Family Recipe</p>
+                    <p>Category: Dinner</p>
+                </div>
+                <div class="main-image">
+                    <img src="images/best-chicken-quesadilla.jpeg" width="300" alt = "Six pieces of chicken quesadilla stacked on top of one another, topped with sour cream.">
+                </div>
             </div>
             <div class="recipe-grid">
             <h3>Ingredients</h3>
