--- a/travel.html
+++ b/travel.html
@@ -22,6 +22,7 @@
     <main id="main">
         <h1>Travel</h1>
         <div>
+        <div class = "location-info">
             <h2>Location: Vatican</h2>
             <div class="main-image">
                 <img src="images/Vatican_Museum_d.jpg" width="300" alt = "Painted ceiling at the vatican museum, depicting religious figures and intricate sky background">
@@ -31,6 +32,8 @@
                 <p>The Vatican, home to St. Peter's Basilica and the Sistine Chapel, is a hub of religious and artistic treasures, showcasing Renaissance masterpieces and the iconic Michelangelo's frescoes.</p>
                 <p>Situated in Rome, Italy, the Vatican City is the smallest independent state globally, surrounded by Rome's historic city walls, offering a blend of religious significance and architectural marvels.</p>
             </div>
+        </div>
+        <div class = "gallery">
             <div class="gallery-header">
                 <h3>Photo Gallery</h3>
             </div>
@@ -39,8 +42,10 @@
                 <img src="images/vatican2.jpeg" width="300" alt = "The vatican cathedral at sunset show from across the water.">
                 <img src="images/vatican-stairs.jpeg" width="300" alt = "A grand spiral staircase, with the stairs lit up and blue designs on the walls.">
             </div>
+            </div>
         </div>
         <div>
+        <div class = "location-info">
             <h2>Location: Big Ben</h2>
             <div class="main-image">
                 <img src="images/bigben.jpeg" width="300" alt="A large historical clocktower, surrounded by shorter buildings in a similar style.">
@@ -50,6 +55,8 @@
                 <p>Big Ben, part of the Palace of Westminster, is an iconic symbol of London, known for its majestic clock tower and the melodious chimes that resonate across the River Thames.</p>
                 <p>Located in London, England, the city embraces a rich history and cultural diversity, with landmarks like Buckingham Palace and the British Museum, making it a vibrant metropolis.</p>
             </div>
+        </div>
+        <div class="gallery">
             <div class="gallery-header">
                 <h3>Photo Gallery</h3>
             </div>
@@ -59,7 +66,9 @@
                 <img src="images/london2.jpeg" width="300" alt = "The city of London from above at sunset, with a river running through the center.">
             </div>
         </div>
+        </div>
         <div>
+        <div class = "location-info">
             <h2>Location: Taj Mahal</h2>
             <div class="main-image">
                 <img src="images/taj-mahal-3.jpg" width="300" alt = "A grand white building at the end of an intricate orange corridor.">
@@ -69,6 +78,8 @@
                 <p>The Taj Mahal, a marvel of Mughal architecture, stands as a testament to eternal love, with its white marble façade and intricate carvings, creating a breathtaking spectacle.</p>
                 <p>Nestled in Agra, India, the Taj Mahal overlooks the Yamuna River and is surrounded by lush gardens, offering a serene ambiance in the heart of historical India.</p>
             </div>
+        </div>
+        <div class="gallery">
             <div class="gallery-header">
                 <h3>Photo Gallery</h3>
             </div>
@@ -78,7 +89,9 @@
                 <img src="images/tajmahal-interior.jpeg" width="300" alt = "A beautiful red interior, with designed walls and archways.">
             </div>
         </div>
+        </div>
         <div>
+        <div class = "location-info">
             <h2>Location: Mount Fuji</h2>
             <div class="main-image">
                 <img src="images/Mount_Fuji.jpeg" width="300" alt = "A large mountain from a distance, surrounded by forest and trees at the base.">
@@ -88,6 +101,8 @@
                 <p>Mount Fuji, Japan's highest peak, is an iconic stratovolcano with a symmetrical cone, attracting climbers and providing breathtaking views of cherry blossoms in spring.</p>
                 <p>Situated in Fujinomiya, Japan, Mount Fuji is part of the scenic Fuji-Hakone-Izu National Park, offering a picturesque landscape with lakes and hot springs.</p>
             </div>
+        </div>
+        <div class="gallery">
             <div class="gallery-header">
                 <h3>Photo Gallery</h3>
             </div>
@@ -97,7 +112,9 @@
                 <img src="images/fuji2.jpeg" width="300" alt = "The peak of a snowcapped mountain from a distance, with red and green trees in the foreground.">
             </div>
         </div>
+        </div>
         <div>
+        <div class = "location-info">
             <h2>Location: La Sagrada Familia</h2>
             <div class="main-image">
                 <img src="images/la_sagrada_familia.jpeg" width="500" alt = "An intricate beige cathedral with spiked towers at the top.">
@@ -107,6 +124,8 @@
                 <p>La Sagrada Familia, designed by Antoni Gaudí, is a masterpiece of modernist architecture, featuring intricate sculptures and unique design elements that make it a symbol of Barcelona.</p>
                 <p>Located in Barcelona, Spain, the city boasts a lively culture, Mediterranean beaches, and architectural wonders, with Gaudí's influence evident in various landmarks like Park Güell.</p>
             </div>
+        </div>
+        <div class="gallery">
             <div class="gallery-header">
                 <h3>Photo Gallery</h3>
             </div>
@@ -115,6 +134,7 @@
                 <img src="images/sagrada.jpg" width="300" alt = "The top of a white cathedral, series of differently sized pillars and architectural designs.">
                 <img src="images/sagrada-above.jpeg" width="300" alt = "Birdseye view of a city with a large white cathedral sticking out in the center. ">
             </div>
+        </div>
         </div>
     </main>
 </body>
