--- a/recipes.html
+++ b/recipes.html
@@ -33,6 +33,7 @@
                     <img src="images/swedish-pancakes.jpeg" width="300" alt = "Three thin pancakes on a white plate, topped with sugar, blackberries, and peaches.">
                 </div>
                 <p>I learned to make Swedish pancakes from my mom, who is a Swedish immigrant. Making them reminds me of childhood and all of my family still living in Sweden.</p>
+                <button class="button">Hide Recipe Details</button>
             </div>
             <div class="recipe-grid">
             <h3>Ingredients</h3>
@@ -71,6 +72,7 @@
                     <img src="images/worst_cookies2.jpg" width="300" alt = "Two chocolate chip cookies on a wooden table, surrounded by chocolate chips and brown sugar.">
                 </div>
                 <p>These cookies were my favorite thing to bake when I was young because of the simplicity.</p>
+                <button class="button">Hide Recipe Details</button>
             </div>
             <div class="recipe-grid">
             <h3>Ingredients</h3>
@@ -111,6 +113,7 @@
                 <div class="main-image">
                     <img src="images/best-chicken-quesadilla.jpeg" width="300" alt = "Six pieces of chicken quesadilla stacked on top of one another, topped with sour cream.">
                 </div>
+                <button class="button">Hide Recipe Details</button>
             </div>
             <div class="recipe-grid">
             <h3>Ingredients</h3>
@@ -142,5 +145,22 @@
             </div>
         </div>
     </main>
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.querySelectorAll('.button').forEach(button => {
+            button.addEventListener('click', function() {
+                const recipeGrid = this.parentElement.nextElementSibling;
+
+                if (recipeGrid.style.display !== "none") {
+                    recipeGrid.style.display = "none";
+                    this.textContent = "Show Recipe Details";
+                } else {
+                    recipeGrid.style.display = "block"; // Show the grid if it's hidden.
+                    this.textContent = "Hide Recipe Details";
+                }
+            });
+        });
+    });
+    </script>
 </body>
 </html>
